# RoboCup-Home-Follow

./: README.md
bringup/: CMakeLists.txt  package.xml
bringup/launch/: fake.launch  follower.launch  follower_simulation.launch  rviz.launch
bringup/rviz/: navigation.rviz
headless_move_base/: CMakeLists.txt  package.xml
headless_move_base/src/: headless_move_base.cpp
robot_fake/: CMakeLists.txt  package.xml
robot_fake/src/: base_controller_fake.cpp  laserscan_fake_follow.cpp
user_tracker/: CMakeLists.txt  package.xml
user_tracker/include/user_tracker/: user_tracker.h
user_tracker/src/: show_footprint.cpp  show_trace.cpp  user_footprint_follow.cpp  user_trackNEO.cpp  user_tracker_laser.cpp
user_tracker_msgs/: CMakeLists.txt  package.xml
user_tracker_msgs/msg/: Blindage.msg  PlaneModel.msg  UserPoseCloud.msg
